OpenJML/releaseTests/testPath2/expected
../testfiles/testPath/data/TestPath.java:3: error: cannot find symbol
    //@ requires z ; // BAD
                 ^
  symbol:   variable z
  location: class TestPath
1 error
